src/test/deca/codegen/invalid/invalid_format_int_insuffisance.deca
// Test parser, invalid int format avec debordement

{
    int x = -2147483647;
    x = x - 2;
    println(x);
}